syntax = "proto2";

import "file.proto";

message SingleFileSync {
    required bytes id = 1;
    required uint32 version = 2;
    required bytes hash = 3;
}


message SynchronizationBucket {
    repeated SingleFileSync fileSync = 1;
}

message HashBucket {
    required bytes hash = 1;
    repeated uint32 divisions = 2;
}

message Synchronization {
    repeated HashBucket buckets = 1;
    repeated uint32 divisions = 2;
}